    empty constructors.
  - The return type of operations and properties is now adapted correctly if the type of the operation
    or property is a super type of the result's type.
  
* Some bugs in the OCL2 Parser were fixed.
  - The special operations OclAny.oclAsType(), oclIsKindOf(), ... can now contain Property- 
    and OperationCallExpressions instead of simple TypeLiteralExpressions.
    
* Complete rewrite of the OCL Standard Library; some bugs were fixed.
  - invalid and null values are now created by every library method and no exceptions are thrown
  - consistent way of handling null(undefined) and invalid
  - undefined can be created for AnyType
  - TypeConstants: create BagType, etc. instead of CollectionType -> invalid and undefined collections can be created
  - OclBoolean: and(), or() and implies() accept undefined values and can return OclBooleans (standard, p. 15)
  - union(OclSequence) only on OclSequence instead of SortedCollection
  - excluding(T) now removes all appearances, not only the first
  - OclCollections can return their generic/element type
  - support for the creation of nested OclCollections
  - OclAny: oclIsUndefined() now returns invalid if the object is invalid
  - OclString: substring() returns invalid if lower index is greater than higher index

* Some bugs in the Ocl22Java Code Generator was fixed.
  - The code generation of OclAny.allInstances() now works appropriately again.
  - The code generation of Collection.flatten() now works appropriately.
  - Transformation of abstract Collection type now works appropriately.
  - The transformation of operations whose arguments are named differently in the constraint's context
    than in the model now works correctly.


GUI
---
* The Model Instance Browser has been improved.
  - Owned properties of ModelInstanceElements can now be browsed.
  

Tests
-----
* A new Modelbus Test Suite Plug-in has been introduced.

* A new OCL Standard Library Test Suite Plug-in has been introduced.
