@@ -2787,34 +2787,6 @@ public class TestCollection {
 
 	/**
 	 * <p>
-	 * A test case testing the method
-	 * <code>Collection->product(Collection(T))</code>.
-	 * </p>
-	 */
-	@Test(expected = SemanticException.class)
-	public void testProductNegative01() throws Exception {
-
-		TestPerformer testPerformer;
-
-		String modelFileName;
-		String oclFileName;
-
-		oclFileName = "standardlibrary/collection/productNegative01.ocl";
-		modelFileName = "testmodel.uml";
-
-		/* Try to get the TestPerformer. */
-		testPerformer =
-				TestPerformer.getInstance(AllStandardLibraryTests.META_MODEL_ID,
-						AllStandardLibraryTests.MODEL_BUNDLE,
-						AllStandardLibraryTests.MODEL_DIRECTORY);
-		testPerformer.setModel(modelFileName);
-
-		/* Try to parse the constraint file. */
-		testPerformer.parseFile(oclFileName);
-	}
-
-	/**
-	 * <p>
 	 * A test case testing the method <code>Collection->size()</code>.
 	 * </p>
 	 */
