@@ -49,6 +49,7 @@ Release 2.1 (not scheduled yet)
 * Some bugs in the OCL2 Parser were fixed.
   - The special operations OclAny.oclAsType(), oclIsKindOf(), ... can now contain Property- 
     and OperationCallExpressions instead of simple TypeLiteralExpressions.
+  - Collection(T1).product(Collection(T2)) is now parsed appropriately.
     
 * Complete rewrite of the OCL Standard Library; some bugs were fixed.
   - invalid and null values are now created by every library method and no exceptions are thrown
